2007-08-26  Luca Bruno  <lethalman88@gmail.com>

	Fixed English for some comments, thanks to billijoex.
	
	* syx/syx-utils.c (syx_cold_parse_methods): restore the lexer if the syntax is not the expected for parsing method definitions

	Default compiler is now the C compiler, not the ST anymore. The ST compiler will be mantained
	for reference only.
	
	* syx/syx-lexer.c (syx_lexer_next_chunk): do not truncate the text by one char if it's at the end

	* syx/syx-parser.c (syx_parser_parse): be able to skip message pattern
	All calls have been updated

	* st/kernel/Compiler.st (runMultipleAndDeclarations): added

2007-08-24  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-error.h: got rid of varargs macros

	* syx/syx-platform.h (SYX_BEGIN_DECLS): begins declarations for cplusplus
	(SYX_END_DECLS): ends declarations for cplusplus
	All headers have been updated

2007-08-22  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-platform.h (syx_strdup): added
	(strndup): renamed to syx_strndup and moved from syx-types.h
	(malloc, malloc0, calloc, free): moved from syx-types.h
	All calls have been updated
	
	* All mixed declarations and code changed to for strict ISO C
	
	* All comments changed to complain ANSI C
	
	* syx/syx-object.h (struct SyxObject): bit-fields were removed for -pedantic, the size didn't vary

	* syx/syx-utils.c: issue #15 (Krzysztof Kowalczyk)

	* Fixed issue #14 (kkowalczyk)

2007-08-21  Luca Bruno  <lethalman88@gmail.com>

	* examples/embedding/SConscript: fix use of -rdynamic

	* Applied patch of issue #13

	* syx/syx-signal.c: signal function to be optional

2007-08-20  Luca Bruno  <lethalman88@gmail.com>
	
	== Released 0.1.4 version ==

	* Missing documentation was covered for Doxygen

2007-08-19  Luca Bruno  <lethalman88@gmail.com>

	* src/main.c (_parse_args): an comand line option parser was created to replace getopt

	* examples/console/SConscript (target): added

	* examples/SConscript: added

	* examples/embedding/SConscript: added
